<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:key="root_key">
    <ListPreference
        android:defaultValue="true"
        android:key="work_mode_key"
        android:title="@string/auto_clear_work_mode"
        app:entries="@array/work_mode_entry_values"
        android:entryValues="@array/work_mode_entry_keys"
        app:useSimpleSummaryProvider="true"/>
    <Preference
        android:key="auto_clear_count_key"
        android:title="@string/auto_clear_read_count_title"
        android:summary="@string/auto_clear_read_count_summary"/>
    <Preference
        android:key="auto_clear_exclude"
        android:title="@string/auto_clear_exclude_title"
        android:summary="@string/auto_clear_exclude_summary"/>
    <Preference
        android:summary="@string/auto_clear_whitelist_desc"
        android:key="whitelist_key"
        android:title="@string/auto_clear_whitelist"/>
    <Preference
        android:summary="@string/auto_clear_blacklist_desc"
        android:key="blacklist_key"
        android:title="@string/auto_clear_blacklist"/>
</PreferenceScreen>