<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.hhvvg.ecm.ui.fragment.MainFragment"
        android:label="@string/main_fragment_label" >
        <action
            android:id="@+id/action_mainFragment_to_readStrategyFragment"
            app:destination="@id/readStrategyFragment"
            app:enterAnim="@anim/anim_open_enter"
            app:exitAnim="@anim/anim_open_exit"
            app:popEnterAnim="@anim/anim_close_enter"
            app:popExitAnim="@anim/anim_close_exit"/>
        <action
            android:id="@+id/action_mainFragment_to_writeStrategyFragment"
            app:destination="@id/writeStrategyFragment"
            app:enterAnim="@anim/anim_open_enter"
            app:exitAnim="@anim/anim_open_exit"
            app:popEnterAnim="@anim/anim_close_enter"
            app:popExitAnim="@anim/anim_close_exit"/>
        <action
            android:id="@+id/action_mainFragment_to_autoClearStrategyFragment"
            app:destination="@id/autoClearStrategyFragment"
            app:enterAnim="@anim/anim_open_enter"
            app:exitAnim="@anim/anim_open_exit"
            app:popEnterAnim="@anim/anim_close_enter"
            app:popExitAnim="@anim/anim_close_exit"/>
    </fragment>

    <fragment
        android:id="@+id/readStrategyFragment"
        android:name="com.hhvvg.ecm.ui.fragment.ReadStrategyFragment"
        android:label="@string/read_strategy_title"
        tools:layout="@layout/fragment_read_strategy"/>

    <fragment
        android:id="@+id/writeStrategyFragment"
        android:name="com.hhvvg.ecm.ui.fragment.WriteStrategyFragment"
        android:label="@string/write_strategy_title"
        tools:layout="@layout/fragment_write_strategy"/>

    <fragment
        android:id="@+id/autoClearStrategyFragment"
        android:name="com.hhvvg.ecm.ui.fragment.AutoClearStrategyManagementFragment"
        android:label="@string/auto_clear_title" >
        <action
            android:id="@+id/action_autoClearStrategyFragment_to_autoClearExclusionListFragment"
            app:destination="@id/autoClearExclusionListFragment"
            app:enterAnim="@anim/anim_open_enter"
            app:exitAnim="@anim/anim_open_exit"
            app:popEnterAnim="@anim/anim_close_enter"
            app:popExitAnim="@anim/anim_close_exit"/>
        <action
            android:id="@+id/action_autoClearStrategyFragment_to_workModeListFragment"
            app:destination="@id/workModeListFragment"
            app:enterAnim="@anim/anim_open_enter"
            app:exitAnim="@anim/anim_open_exit"
            app:popEnterAnim="@anim/anim_close_enter"
            app:popExitAnim="@anim/anim_close_exit"/>
    </fragment>

    <fragment
        android:id="@+id/workModeListFragment"
        android:name="com.hhvvg.ecm.ui.fragment.WorkModeListFragment"
        android:label="@string/filter_apps"/>

    <fragment
        android:id="@+id/autoClearExclusionListFragment"
        android:name="com.hhvvg.ecm.ui.fragment.AutoClearContentExclusionFragment"
        android:label="@string/exclusion_list_label"
        tools:layout="@layout/fragment_auto_clear_content_exclusion"/>
</navigation>
